# storage/api-docs/api-docs.json
@@ -107,296 +107,6 @@
                     }
                 ]
             }
-        },
-        "/product": {
-            "get": {
-                "tags": [
-                    "Product"
-                ],
-                "summary": "Get Product List",
-                "description": "Get Product List",
-                "operationId": "getProductList",
-                "parameters": [
-                    {
-                        "name": "page",
-                        "in": "query",
-                        "description": "Page",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "per_page",
-                        "in": "query",
-                        "description": "Per Page",
-                        "required": false,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "name": "keyword",
-                        "in": "query",
-                        "description": "Keyword",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful"
-                    }
-                },
-                "security": [
-                    {
-                        "passport": [
-                            "*"
-                        ]
-                    }
-                ]
-            },
-            "post": {
-                "tags": [
-                    "Product"
-                ],
-                "summary": "Create Product",
-                "description": "Create Product",
-                "operationId": "createProduct",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "name": {
-                                        "type": "string"
-                                    },
-                                    "remark": {
-                                        "type": "string"
-                                    },
-                                    "is_discount": {
-                                        "type": "integer"
-                                    },
-                                    "quantity": {
-                                        "type": "integer"
-                                    },
-                                    "price": {
-                                        "type": "integer"
-                                    },
-                                    "date": {
-                                        "type": "string"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Successful"
-                    }
-                },
-                "security": [
-                    {
-                        "passport": [
-                            "*"
-                        ]
-                    }
-                ]
-            }
-        },
-        "/product/{id}": {
-            "get": {
-                "tags": [
-                    "Product"
-                ],
-                "summary": "Get Product By Id",
-                "description": "Get Product By Id",
-                "operationId": "getProductById",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "ID",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful"
-                    }
-                },
-                "security": [
-                    {
-                        "passport": [
-                            "*"
-                        ]
-                    }
-                ]
-            },
-            "post": {
-                "tags": [
-                    "Product"
-                ],
-                "summary": "Update Product",
-                "description": "Update Product",
-                "operationId": "updateProduct",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "ID",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "name": {
-                                        "type": "string"
-                                    },
-                                    "remark": {
-                                        "type": "string"
-                                    },
-                                    "is_discount": {
-                                        "type": "integer"
-                                    },
-                                    "quantity": {
-                                        "type": "integer"
-                                    },
-                                    "price": {
-                                        "type": "integer"
-                                    },
-                                    "date": {
-                                        "type": "string"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Successful"
-                    }
-                },
-                "security": [
-                    {
-                        "passport": [
-                            "*"
-                        ]
-                    }
-                ]
-            },
-            "delete": {
-                "tags": [
-                    "Product"
-                ],
-                "summary": "Delete Product",
-                "description": "Delete Product",
-                "operationId": "deleteProduct",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "ID",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful"
-                    }
-                },
-                "security": [
-                    {
-                        "passport": [
-                            "*"
-                        ]
-                    }
-                ]
-            }
-        },
-        "/product/{id}/restore": {
-            "post": {
-                "tags": [
-                    "Product"
-                ],
-                "summary": "Restore Product",
-                "description": "Restore Product",
-                "operationId": "restoreProduct",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "ID",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful"
-                    }
-                },
-                "security": [
-                    {
-                        "passport": [
-                            "*"
-                        ]
-                    }
-                ]
-            }
-        },
-        "/product/{id}/permanent-delete": {
-            "delete": {
-                "tags": [
-                    "Product"
-                ],
-                "summary": "Permanent Delete Product",
-                "description": "Permanent Delete Product",
-                "operationId": "permanentDeleteProduct",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "ID",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful"
-                    }
-                },
-                "security": [
-                    {
-                        "passport": [
-                            "*"
-                        ]
-                    }
-                ]
-            }
         }
     },
     "components": {
